# marker_tracker

./: .gitignore  CMakeLists.txt  README.md  manifest.xml~  package.xml  package.xml~  parameters.xml  parameters.yaml
include/: Kalman3D.hpp  MarkerTracker.hpp  marker_tracker_node.h  marker_tracker_node.hpp  template.hpp
launch/: marker.launch  marker_tracker_node.launch  noview_marker.launch  slow_marker.launch  test.launch
param/: k2.yaml  kinect_01.yaml  kinect_02.yaml  kinect_03.yaml  kinect_04.yaml  parameters.yaml
qt_files/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  marker_tracker.cbp
qt_files/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
qt_files/catkin_generated/installspace/: marker_tracker.pc  marker_trackerConfig.cmake
qt_files/catkin_generated/stamps/marker_tracker/: package.xml.stamp
qt_files/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
qt_files/devel/lib/pkgconfig/: marker_tracker.pc
qt_files/devel/share/marker_tracker/cmake/: marker_trackerConfig.cmake
qt_files/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
src/: Kalman3D.cpp  MarkerTracker.cpp  cube_detector.cpp  marker_decoder_node.cpp  marker_tracker_node.cpp  master_node.cpp  visp_tracker.cpp
